--- a/snippets/header-content.liquid
+++ b/snippets/header-content.liquid
@@ -209,9 +209,9 @@
 
     assign book_now_button_text = header_settings.book_now_button_text | default: 'Book Now'
     assign book_now_button_url = header_settings.book_now_button_url | default: ''
-    assign book_now_button_bg_color = settings.color_primary_orange | default: '#FF6B35'
+    assign book_now_button_bg_color = settings.button_background_color | default: '#FF6B35'
     assign book_now_button_text_color = settings.color_white | default: '#FFFFFF'
-    assign book_now_button_hover_bg_color = settings.color_light_orange | default: '#FF8C61'
+    assign book_now_button_hover_bg_color = settings.button_hover_background_color | default: '#FF8C61'
     assign book_now_button_hover_text_color = settings.color_white | default: '#FFFFFF'
     assign book_now_button_font_size = header_settings.book_now_button_font_size | default: 16
     assign book_now_button_font_weight = header_settings.book_now_button_font_weight | default: '600'
@@ -323,8 +323,7 @@
             -%}
             <a href="{{ button_href }}" 
                class="book-now-button btn"
-               style="background-color: {{ book_now_button_bg_color }};
-                      color: {{ book_now_button_text_color }} !important;
+               style="color: {{ book_now_button_text_color }} !important;
                       font-size: {{ book_now_button_font_size }}px;
                       font-weight: {{ book_now_button_font_weight }};
                       padding: {{ book_now_button_padding_y }}px {{ book_now_button_padding_x }}px;
