--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -533,7 +533,7 @@
       {% endif %}
       {% if section.settings.button_link != blank %}
         <a href="{{ section.settings.button_link }}" 
-           class="btn btn-glow-cta"
+           class="btn-glow-cta"
            style="margin-bottom: {{ button_position_bottom }}%;">
           {{ section.settings.button_text }}
         </a>
